split logic and logger interface
