# docs/swagger.json
@@ -6,7 +6,7 @@
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Kajal Rana",
-            "email": "kajalrana@example.com"
+            "email": "kasssjalrana@example.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -66,6 +66,20 @@
                     "application/json"
                 ],
                 "summary": "create split data by group id",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/split/{groupId}": {
+            "get": {
+                "description": "Retrieve split details",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get final split data by group id",
                 "responses": {
                     "200": {
                         "description": "OK"
